--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="row clearfix">
                     <div class="column full">     
                         <h1>Zain Ali</h1>
-                        <h2 style="text-align:center;">zain08816@gmail.com</h2>
+                        <h2 style="text-align:center;">zain@zainali.me</h2>
                     </div>
                 </div>
                 
