--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <br>
                     
                     <h4>about</h4>
-                        <h2>&bull; studying Comp Sci + Psych at Rutgers University (may '21)</h2>
+                        <h2>&bull; studying Comp Sci + Psych at Rutgers University</h2>
                         <h2>&bull; software engineer at <a href="http://aiaa.rutgers.edu/proj2.html" target="_blank">RUAutonomous</a>, executive board for <a href="http://aiaa.rutgers.edu/" target="_blank">Rutgers AIAA</a></h2>
                         <h2>&bull; interested in coding, psychology, aerospace, and farming</a>
                         <h2>&bull; <a href="https://drive.google.com/file/d/1DhuV1KsEqnqTcUHF3HbhLm7kKPfPGC9f/view" target="_blank">Resume</a>, <a href="https://www.linkedin.com/in/zain08816/" target="_blank">LinkedIn</a>, <a href="https://github.com/zain08816" target="_blank">Github</a>, <a href="https://app.codesignal.com/profile/zain_a7" target="_blank">CodeSignal</a></h2>
